import {
  ConflictException,
  Injectable,
  NotFoundException,
} from '@nestjs/common';
import { InjectModel } from '@nestjs/sequelize';
import { Mascota } from './mascota.model';
import { CreateMascotaDto } from './dto/create-mascota.dto';
import { Especie } from './especie/especie.model';
import { Condicion } from './condicion/condicion.model';
import { User } from '../../src/usuario/usuario.model';
import { UpdateMascotaDto } from './dto/update-mascota.dto';
import { Role } from '../../src/auth/roles.enum';
import { JwtPayload } from '../../src/auth/jwt-playload.interface';
import { AccesoService } from '../../src/acceso/acceso.service';
import { QueryOpcionesDto } from '../../src/common/dto/query-opciones.dto';
import { Op } from 'sequelize';
import { EspecieService } from './especie/especie.service';
import { CondicionService } from './condicion/condicion.service';
import { Publicacion } from '../publicacion/publicacion.model';

@Injectable()
export class MascotaService {
  constructor(
    @InjectModel(Mascota)
    private mascotaModel: typeof Mascota,

    @InjectModel(Especie)
    private especieModel: typeof Especie,

    @InjectModel(Condicion)
    private condicionModel: typeof Condicion,

    @InjectModel(User)
    private userModel: typeof User,

    @InjectModel(Publicacion)
    private publicacionModel: typeof Publicacion,

    private readonly condicionService: CondicionService,
    private readonly especieService: EspecieService,
    private readonly accesoService: AccesoService,
  ) {}

  public async validarMascota(id: number): Promise<Mascota> {
    const mascota = await this.mascotaModel.findByPk(id, {
      include: [Especie, Condicion, User],
    });
    if (!mascota) {
      throw new NotFoundException(`La mascota con ID ${id} no existe`);
    }
    return mascota;
  }

  async findAll(usuarioId: number, usuario: JwtPayload): Promise<Mascota[]> {
    this.accesoService.verificarUsuarioDeRuta(usuario, usuarioId);
    const where =
      usuario.rol_id === Number(Role.ADMIN) ? {} : { usuario_id: usuario.sub };
    return this.mascotaModel.findAll({
      where,
      include: [Especie, Condicion, User],
    });
  }

  async findOne(
    id: number,
    usuarioId: number,
    usuario: JwtPayload,
  ): Promise<Mascota> {
    this.accesoService.verificarUsuarioDeRuta(usuario, usuarioId);
    const mascota = await this.validarMascota(id);
    this.accesoService.verificarAcceso(usuario, mascota);
    return mascota;
  }

  async create(
    dto: CreateMascotaDto,
    usuarioId: number,
    usuario: JwtPayload,
  ): Promise<Mascota> {
    this.accesoService.verificarUsuarioDeRuta(usuario, usuarioId);
    await this.especieService.validarEspecie(dto.especie_id);
    await this.condicionService.validarCondicion(dto.condicion_id);

    return this.mascotaModel.create({
      nombre: dto.nombre,
      raza: dto.raza,
      sexo: dto.sexo,
      edad: dto.edad,
      vacunado: dto.vacunado,
      tamanio: dto.tamanio,
      fotos_url: dto.fotos_url,
      especie_id: dto.especie_id,
      condicion_id: dto.condicion_id,
      usuario_id: usuario.sub,
    });
  }

  async update(
    id: number,
    dto: UpdateMascotaDto,
    usuarioId: number,
    usuario: JwtPayload,
  ): Promise<Mascota> {
    const mascota = await this.findOne(id, usuarioId, usuario);

    if (dto.especie_id && dto.especie_id !== mascota.especie_id) {
      await this.especieService.validarEspecie(dto.especie_id);
    }

    if (dto.condicion_id && dto.condicion_id !== mascota.condicion_id) {
      await this.condicionService.validarCondicion(dto.condicion_id);
    }
    await mascota.update(dto);
    return mascota;
  }

  async remove(
    id: number,
    usuarioId: number,
    usuario: JwtPayload,
  ): Promise<void> {
    const mascota = await this.findOne(id, usuarioId, usuario);

    const publicacionesCount = await this.publicacionModel.count({
      where: { mascota_id: id },
    });

    if (publicacionesCount > 0) {
      throw new ConflictException(
        'No se puede eliminar la mascota porque tiene publicaciones asociadas.',
      );
    }

    await mascota.destroy();
  }

  async findMascotasConFiltros(
    usuarioId: number,
    usuario: JwtPayload,
    params: QueryOpcionesDto,
  ): Promise<{ mascotas: Mascota[]; total: number; totalPages: number }> {
    this.accesoService.verificarUsuarioDeRuta(usuario, usuarioId);
    const {
      q,
      page = 1,
      limit = 10,
      sortBy = 'nombre',
      sortOrder = 'asc',
    } = params;
    const offset = (page - 1) * limit;

    const where =
      usuario.rol_id === Number(Role.ADMIN) ? {} : { usuario_id: usuario.sub };

    if (q) {
      where[Op.or] = [
        { raza: { [Op.iLike]: `%${q}%` } },
        { nombre: { [Op.iLike]: `%${q}%` } },
      ];
    }

    const { count, rows } = await this.mascotaModel.findAndCountAll({
      where,
      limit,
      offset,
      order: [[sortBy, sortOrder]],
      include: [Especie, Condicion, User],
    });

    return {
      mascotas: rows,
      total: count,
      totalPages: Math.ceil(count / limit),
    };
  }
}
